--- a/pom.xml
+++ b/pom.xml
@@ -2,17 +2,17 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.zkoss.demo</groupId>
-	<artifactId>zkdatahandlerdemo</artifactId>
+	<artifactId>zk8-datahandler-demo</artifactId>
 	<version>1.0.0</version>
 	<properties>
-		<zk.version>8.0.0-SNAPSHOT</zk.version>
+		<zk.version>8.0.0.FL.20150824</zk.version>
 		<commons-io>2.4</commons-io>
 		<maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
 		<packname>-${project.version}-FL-${maven.build.timestamp}</packname>
 	</properties>
 	<packaging>war</packaging>
-	<name>The datahandlerdemo Project</name>
-	<description>The datahandlerdemo Project</description>
+	<name>The zk8-datahandler-demo Project</name>
+	<description>The zk8-datahandler-demo Project</description>
 	<licenses>
 		<license>
 			<name>GNU LESSER GENERAL PUBLIC LICENSE, Version 3</name>
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>org.zkoss.zk</groupId>
             <artifactId>zkmax</artifactId>
-            <version>${zk.version}</version>
+            <version>${zk.version}-Eval</version>
         </dependency>
         <dependency>
             <groupId>org.zkoss.zk</groupId>
@@ -127,7 +127,7 @@
 
         <dependency>
             <groupId>org.zkoss</groupId>
-            <artifactId>datahandler-intro</artifactId>
+            <artifactId>datahandler-introjs</artifactId>
             <version>1.0.0</version>
         </dependency>
 
@@ -205,7 +205,7 @@
 							<goal>single</goal>
 						</goals>
 						<configuration>
-							<finalName>datahandlerdemo${packname}</finalName>
+							<finalName>zk8-datahandler-demo${packname}</finalName>
 							<appendAssemblyId>false</appendAssemblyId>
 							<descriptors>
 								<descriptor>src/main/assembly/webapp.xml</descriptor>
