--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
  xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"> 
 
 	<description><![CDATA[My ZK Application]]></description>
-	<display-name>zkdatahandlerdemo</display-name>
+	<display-name>zk8-datahandler-demo</display-name>
 
 	<!-- //// -->
 	<!-- ZK -->
